Slight color changes

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="container">
         <h2>Service description</h2>
         <p>Here is a list of services offered</p>            
-        <table class="table table-primary table-image">
+        <table class="table table-info table-image">
             <thead>
             <tr>
                 <th>Service</th>
@@ -148,7 +148,7 @@
                 <div class="card-body">
                     <h4 class="card-title">Jules</h4>
                     <p class="card-text">Specialty: tune-ups and customizations</p>
-                    <a href="#profile-jules" class="btn btn-primary" data-toggle="collapse">See Profile</a>
+                    <a href="#profile-jules" class="btn btn-info" data-toggle="collapse">See Profile</a>
                     <div id="profile-jules" class="collapse p-3">
                         <p>Jules has raced competitively for 10 years. She's an expert with road bikes and has a reputation for customization.</p>
                     </div>
@@ -159,7 +159,7 @@
                 <div class="card-body">
                     <h4 class="card-title">Mike</h4>
                     <p class="card-text">Specialty: Tire, chain and brake repairs.</p>
-                    <a href="#profile-mike" class="btn btn-primary" data-toggle="collapse">See Profile</a>
+                    <a href="#profile-mike" class="btn btn-info" data-toggle="collapse">See Profile</a>
                     <div id="profile-mike" class="collapse p-3">
                         <p>Mike knows anything about dirt bikes. He has raced for years and has worked in bike repairs for even longer.</p>
                     </div>
@@ -261,7 +261,7 @@
                             <label for="phone">Phone Number:</label>
                             <input type="tel" class="form-control" id="phone" name="phone" required>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-info">Submit</button>
                         </form>
                     </div>
                 </div>
@@ -303,7 +303,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary " data-dismiss="modal">Submit</button>
+                    <button type="submit" class="btn btn-info " data-dismiss="modal">Submit</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>     
